# WSGI-Application

./: .gitignore  2. Архитектура python-приложений.md  4. Порождающие паттерны.md  6. Поведенческие паттерны.md  8. Антипаттерны.md  Dockerfile  README.md  create_db.py  create_db.sql  docker-compose.yml  education.db  log  makefile  pyproject.toml  settings.py  urls.py  views.py  views_courses.py  views_courses_students.py  views_main.py  views_static.py  views_teachers.py  wsgi.py
README/tasks/: 01_lesson.md  03_lesson.md  04_task.md  05_lesson.md  07_lesson.md  09_lesson.md
framework_wsgi/: app.py  debug_decorator.py  middleware.py  templator.py  urls.py  views.py
framework_wsgi/design_patterns/: connector.py  data_mapper.py  domain_courses.py  domain_users.py  identity_map.py  logger.py  mapper_registry.py  observer_notifier.py  repository.py  service_layer.py  unit_of_work.py
framework_wsgi/http/: request.py  response.py
lesson_01/: wsgi.py
lesson_01/framework_wsgi/: app.py  page_controller.py  template_view.py
lesson_02/: wsgi.py
lesson_02/framework_wsgi/: app.py  front_controller.py  page_controller.py  template_view.py
lesson_02/templates/: contact.html
lesson_03/: urls.py  views.py
lesson_03/framework_wsgi/: app.py  front_controller.py  middleware.py  (+1 more)
lesson_04/: create_db.sql  education.db  urls.py  views.py  wsgi.py
templates/: about.html  base.html  course_detail.html  course_form.html  course_list.html  index.html  navigation.html
views/: views_categories.py  views_courses.py  views_other.py  views_static.py  views_students.py
(+47 files in other folders)
