[tool.poetry]
name = "architecture-and-patterns"
version = "0.1.0"
description = ""
authors = ["V-U-Simon <V-U-Simon@yandex.ru>"]
readme = "README.md"
packages = [{include = "architecture_and_patterns"}]

[tool.poetry.dependencies]
python = "^3.11"
jinja2 = "^3.1.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
black = "^23.3.0"
isort = "^5.12.0"
autoflake = "^2.1.1"
djlint = "^1.30.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
